@@ -28,6 +28,7 @@ import org.springframework.data.elasticsearch.repository.config.EnableElasticsea
 
 import java.time.Duration;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author Seok Won Choi
@@ -80,19 +81,19 @@ public class OpenSearchRestClientConfiguration extends AbstractOpenSearchConfigu
     public RestHighLevelClient opensearchClient() {
         RestClientBuilder restClientBuilder = RestClient.builder(new HttpHost(endpoint, 443, "https"));
 
-        if (Arrays.asList(environment.getActiveProfiles()).contains("awsIAM")) { // IAM role auth
+        List<String> activeProfiles = List.of(environment.getActiveProfiles());
+        if (activeProfiles.contains("awsIAM")) {
             AWS4Signer signer = new AWS4Signer();
-            String serviceName = "es";
-            signer.setServiceName(serviceName);
+            signer.setServiceName("es");
             signer.setRegionName(region);
             AWSCredentialsProvider awsCredentialsProvider = applicationContext.getBean(AWSCredentialsProvider.class);
-            HttpRequestInterceptor interceptor = new AWSRequestSigningApacheInterceptor(serviceName, signer, awsCredentialsProvider);
+            HttpRequestInterceptor interceptor = new AWSRequestSigningApacheInterceptor("es", signer, awsCredentialsProvider);
             restClientBuilder.setHttpClientConfigCallback(httpClientBuilder -> httpClientBuilder.addInterceptorLast(interceptor));
-        } else if (Arrays.asList(environment.getActiveProfiles()).contains("awsBasic")) { // Basic auth
+        } else if (activeProfiles.contains("awsBasic")) {
             CredentialsProvider credentialsProvider = applicationContext.getBean(CredentialsProvider.class);
             restClientBuilder.setHttpClientConfigCallback(httpClientBuilder -> httpClientBuilder.setDefaultCredentialsProvider(credentialsProvider));
         } else {
-            throw new IllegalArgumentException("Unknown authentication method: " + Arrays.toString(environment.getActiveProfiles()));
+            throw new IllegalArgumentException("Unknown authentication method: " + String.join(", ", environment.getActiveProfiles()));
         }
 
         restClientBuilder
@@ -108,7 +109,7 @@ public class OpenSearchRestClientConfiguration extends AbstractOpenSearchConfigu
         // Single Node doesn't need sniffer!
         Sniffer esSniffer = Sniffer.builder(client.getLowLevelClient())
                 .setSniffIntervalMillis(999999999) // 11.574일 interval
-                .setSniffAfterFailureDelayMillis(999999999)
+                .setSniffAfterFailureDelayMillis(999999999) // (int) Duration.ofDays(11).plusHours(13).plusMinutes(46).toMillis()
                 .build();
 
         sniffOnFailureListener.setSniffer(esSniffer);
